--- a/backend/client/index.html
+++ b/backend/client/index.html
@@ -75,8 +75,10 @@
         });
 
         socket.on('receiveMessage', (data) => {
+          console.log(data);
+
           const li = document.createElement('li');
-          li.textContent = `${data.name}: ${data.content}`;
+          li.textContent = `${data.name}: ${data.message}`;
           document.getElementById('messages').appendChild(li);
         });
 
